sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:5: error: ')' expected but integer literal found.
    for(j<-i to getValueCount()2){
                               ^AlgSelectionSort:11: error: illegal start of simple expression
}
^